syntax = "proto3";

package usage.v1;

option go_package = "github.com/gitpod-io/gitpod/usage-api/v1";

service BillingService {
  // ReconcileInvoices retrieves current credit balance and reflects it in billing system.
  // Internal RPC, not intended for general consumption.
  rpc ReconcileInvoices(ReconcileInvoicesRequest) returns (ReconcileInvoicesResponse) {};

  // GetUpcomingInvoice retrieves the latest invoice for a given query.
  rpc GetUpcomingInvoice(GetUpcomingInvoiceRequest) returns (GetUpcomingInvoiceResponse) {};

  // FinalizeInvoice marks all sessions occurring in the given Stripe invoice as
  // having been invoiced.
  rpc FinalizeInvoice(FinalizeInvoiceRequest) returns (FinalizeInvoiceResponse) {};

  // CancelSubscription cancels a stripe subscription in our system
  // Called by a stripe webhook
  rpc CancelSubscription(CancelSubscriptionRequest) returns (CancelSubscriptionResponse) {};
}

message ReconcileInvoicesRequest {}

message ReconcileInvoicesResponse {}

message GetUpcomingInvoiceRequest {
  oneof identifier {
    string team_id = 1;
    string user_id = 2;
  }
}

message GetUpcomingInvoiceResponse {
  string invoice_id = 1;
  string currency = 2;
  double amount = 3;
  int64  credits = 4;
}

message FinalizeInvoiceRequest {
  string invoice_id = 1;
}

message FinalizeInvoiceResponse {
}

message CancelSubscriptionRequest {
  string subscription_id = 1;
}

message CancelSubscriptionResponse {
}
